<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="registerClickListener"
            type="View.OnClickListener" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            app:srcCompat="@drawable/vector_drawable_landing_header_large" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/vector_drawable_landing_onboarding" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:maxLines="2"
            android:text="@string/lorem_small_para"
            android:textAlignment="center"
            android:textSize="16sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:onClick="@{registerClickListener}"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="22sp"
                app:icon="@drawable/vector_drawable_landing_arr_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_short"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/me_as_collector"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:text="@string/track_my_application"
            android:textAllCaps="false"
            android:textColor="@color/brand_blue"
            android:textSize="16sp"
            app:icon="@drawable/vector_drawable_landing_arr_white"
            app:iconTint="@color/brand_blue" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>